feat: RTL initial support + browser locales fixes

--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -28,7 +28,7 @@ html
 
     block head
 
-  body
+  body(class={ 'rtl': appconfig.langRtl })
     #root.has-stickynav(class=['is-primary-' + appconfig.theme.primary, 'is-alternate-' + appconfig.theme.alt])
       include ./common/header.pug
       alert
