feat: GraphQL translations + login form

--- a/client/scss/base/base.scss
+++ b/client/scss/base/base.scss
@@ -11,10 +11,15 @@ html {
   display: none;
 }
 
-#root {
+#app {
   padding-bottom: 67px;
   position: relative;
   min-height: 100%;
+
+  &.is-fullscreen {
+    width: 100vw;
+    height: 100vh;
+  }
 }
 
 body {
