--- a/server/views/layout.pug
+++ b/server/views/layout.pug
@@ -2,7 +2,7 @@ extends ./master.pug
 
 block body
   body
-    #root.has-stickynav(class=['is-primary-' + appconfig.theme.primary, 'is-alternate-' + appconfig.theme.alt])
+    #app.has-stickynav(class=['is-primary-' + appconfig.theme.primary, 'is-alternate-' + appconfig.theme.alt])
       include ./common/header.pug
       alert
       main
