fix: Content page side menu doesn't scroll when there's overflow - #170 - Updated scss organization per @NGPixel

--- a/client/scss/base/base.scss
+++ b/client/scss/base/base.scss
@@ -66,6 +66,11 @@ a {
 	padding: 20px;
 }
 
+.content-column {
+	height: calc(100vh - 120px);
+  overflow: auto !important;
+}
+
 // Visibility
 
 .is-hidden {
