--- a/server/views/pages/view.pug
+++ b/server/views/pages/view.pug
@@ -72,7 +72,7 @@ block content
                 i.icon-arrow-up2
               +tocMenu(pageData.tree)
 
-        .column.body
+        .column.content-column
           .hero          
             h1.title#title= pageData.meta.title
             if pageData.meta.subtitle
