--- a/client/scss/components/button.scss
+++ b/client/scss/components/button.scss
@@ -61,7 +61,11 @@
 				background-color: mc($color,'800');
 				color: #FFF;
 				animation: none;
-			}
+      }
+
+      &:focus {
+        box-shadow: inset 0 0 0 3px rgba(255,255,255, .4);
+      }
 		}
 
 	}
