--- a/client/scss/pages/_login.scss
+++ b/client/scss/pages/_login.scss
@@ -35,6 +35,7 @@
 
       .login-frame {
         border-radius: 0 6px 6px 0;
+        border-left: none;
       }
     }
 
@@ -104,6 +105,10 @@
       align-items: center;
       transition: all .4s ease;
 
+      &:focus {
+        outline: none;
+      }
+
       @include until($tablet) {
         justify-content: center;
       }
@@ -114,12 +119,24 @@
 
       &:first-child {
         border-top: none;
+
+        &.is-active {
+          border-top: 1px solid rgba(255,255,255, .5);
+        }
       }
 
       &.is-active {
-        background-color: mc('grey', '100');
-        background-image: radial-gradient(circle at top left, rgba(mc('grey', '200'),1) 0%,rgba(255,255,255,1) 100%);
+        background-image: linear-gradient(to right, rgba(255,255,255,1) 0%,rgba(255,255,255,.77) 100%);
         color: mc('light-blue', '700');
+        cursor: default;
+
+        &:hover {
+          background-color: transparent;
+        }
+
+        svg path {
+          fill: mc('light-blue', '800');
+        }
       }
 
       i {
@@ -160,7 +177,8 @@
   }
 
   &-frame {
-    background-image: radial-gradient(circle at top left, rgba(255,255,255,1) 5%,rgba(240,240,240,.6) 100%);
+    background-image: radial-gradient(circle at top center, rgba(255,255,255,1) 5%,rgba(255,255,255,.6) 100%);
+    border: 1px solid rgba(255,255,255, .5);
     border-radius: 6px;
     width: 400px;
     padding: 1rem;
@@ -178,6 +196,7 @@
       font-size: 2rem;
       font-weight: 600;
       color: mc('light-blue', '700');
+      text-shadow: 1px 1px 0 #FFF;
       padding: 0;
       margin: 0;
     }
@@ -186,6 +205,7 @@
       font-size: 1.5rem;
       font-weight: 300;
       color: mc('grey', '700');
+      text-shadow: 1px 1px 0 #FFF;
       padding: 0;
       margin: 0 0 25px 0;
     }
@@ -200,6 +220,7 @@
       border: 1px solid #FFF;
       border-radius: 3px;
       background-color: rgba(255,255,255,.9);
+      box-shadow: inset 0 0 0 3px rgba(255,255,255, .25);
       padding: 0 15px;
       height: 40px;
       margin: 0 0 10px 0;
@@ -212,6 +233,9 @@
       &:focus {
         outline: none;
         border-color: mc('light-blue','500');
+        background-color: rgba(255,255,255,1);
+        box-shadow: inset 0 0 0 3px rgba(mc('light-blue','500'), .25);
+        color: mc('light-blue', '800');
       }
 
     }
