--- a/server/views/common/footer.pug
+++ b/server/views/common/footer.pug
@@ -4,5 +4,5 @@ footer.footer(class=['is-' + appconfig.theme.footer], ref='footer')
     a(href='https://github.com/Requarks/wiki') Wiki.js
     | .
   ul
-    li: a(href='/')= t('footer.home')
+    li: a(href=appconfig.host + '/')= t('footer.home')
     li: a(href='#root')= t('footer.top')
