--- a/server/views/pages/source.pug
+++ b/server/views/pages/source.pug
@@ -10,11 +10,11 @@ block rootNavRight
       a.button.is-outlined(v-on:click='$store.dispatch("modalMovePage/open")')
         i.nc-icon-outline.arrows-1_shuffle-98
         span= t('nav.move')
-    a.button.is-outlined(href='/' + pageData.meta.path)
+    a.button.is-outlined(href=appconfig.host + '/' + pageData.meta.path)
       i.nc-icon-outline.ui-2_book
       span= t('nav.normalview')
     if rights.write
-      a.button.is-orange(href='/edit/' + pageData.meta.path)
+      a.button.is-orange(href=appconfig.host + '/edit/' + pageData.meta.path)
         i.nc-icon-outline.ui-1_edit-76
         span= t('nav.edit')
       a.button(v-on:click='$store.dispatch("modalCreatePage/open")')
