--- a/server/views/configure/index.pug
+++ b/server/views/configure/index.pug
@@ -7,14 +7,14 @@ html(data-logic='configure')
 
     // Favicon
     each favsize in [32, 96, 16]
-      link(rel='icon', type='image/png', sizes=favsize + 'x' + favsize, href='/favicons/favicon-' + favsize + 'x' + favsize + '.png')
+      link(rel='icon', type='image/png', sizes=favsize + 'x' + favsize, href=appconfig.host + '/favicons/favicon-' + favsize + 'x' + favsize + '.png')
 
     // JS / CSS
     script(type='text/javascript').
       var appconfig = !{JSON.stringify(conf)};
       var runmode = !{JSON.stringify(runmode)};
-    script(type='text/javascript', src='/js/vendor.js')
-    script(type='text/javascript', src='/js/configure.js')
+    script(type='text/javascript', src=appconfig.host + '/js/vendor.js')
+    script(type='text/javascript', src=appconfig.host + '/js/configure.js')
 
   body
     #root
@@ -29,7 +29,7 @@ html(data-logic='configure')
         .container
           transition(name='tst-welcome')
             .welcome(v-if='state === "welcome" || state === "restart"')
-              img(src='/images/logo.png', alt='Wiki.js')
+              img(src=appconfig.host + '/images/logo.png', alt='Wiki.js')
               h2 A modern, lightweight and powerful wiki app built on NodeJS, Git and Markdown
           .content(v-cloak)
 
