feat: fusebox updates + vue-component-plugin

--- a/server/views/master.pug
+++ b/server/views/master.pug
@@ -22,7 +22,7 @@ html
       var siteConfig = !{JSON.stringify(config.site)}
 
     //- JS / CSS
-    script(type='text/javascript', src=config.site.path + '/js/vendor.js')
+    script(type='text/javascript', src=config.site.path + '/js/libs.js')
     script(type='text/javascript', src=config.site.path + '/js/app.js')
 
     block head
