--- a/server/views/master.pug
+++ b/server/views/master.pug
@@ -7,7 +7,7 @@ html
     meta(name='theme-color', content='#009688')
     meta(name='msapplication-TileColor', content='#009688')
     meta(name='msapplication-TileImage', content=config.site.path + '/favicons/ms-icon-144x144.png')
-    title= config.title
+    title= config.site.title
 
     //- Favicon
     each favsize in [57, 60, 72, 76, 114, 120, 144, 152, 180]
